plugins/parsers/influx/machine.go

//line machine.rl:1
package influx

import (
	"fmt"
)

var (
	ErrFieldParse = fmt.Errorf("expected field")
	ErrTagParse = fmt.Errorf("expected tag")
	ErrTimestampParse = fmt.Errorf("expected timestamp")
	ErrParse = fmt.Errorf("parse error")
)


//line machine.go:18
const LineProtocol_start int = 490
const LineProtocol_first_final int = 490
const LineProtocol_error int = 0

const LineProtocol_en_nextline int = 489
const LineProtocol_en_main int = 490


//line machine.rl:179


type machine struct {
	data       []byte
	cs         int
	p, pe, eof int
	pb         int
	handler    Handler
	err        error

	count int
}

func NewMachine(handler Handler) *machine {
	m := &machine{
		handler: handler,
	}

	
//line machine.rl:198
	
//line machine.rl:199
	
//line machine.rl:200
	
//line machine.rl:201
	
//line machine.rl:202
	
//line machine.go:57
	{
	 m.cs = LineProtocol_start
	}

//line machine.rl:203

	return m
}

func (m *machine) SetData(data []byte) {
	m.data = data
	m.p = 0
	m.pb = 0
	m.pe = len(data)
	m.eof = len(data)
	m.cs = 0
	m.err = nil

	
//line machine.go:77
	{
	 m.cs = LineProtocol_start
	}

//line machine.rl:217
}

// ParseLine parses a line of input and returns true if more data can be
// parsed.
func (m *machine) ParseLine() bool {
	if m.data == nil || m.p >= m.pe {
		return false
	}

	m.err = nil
	var key []byte
	var yield bool

	
//line machine.go:97
	{
	if ( m.p) == ( m.pe) {
		goto _test_eof
	}
	goto _resume

_again:
	switch  m.cs {
	case 490:
		goto st490
	case 1:
		goto st1
	case 2:
		goto st2
	case 3:
		goto st3
	case 0:
		goto st0
	case 4:
		goto st4
	case 5:
		goto st5
	case 6:
		goto st6
	case 491:
		goto st491
	case 492:
		goto st492
	case 493:
		goto st493
	case 7:
		goto st7
	case 8:
		goto st8
	case 9:
		goto st9
	case 10:
		goto st10
	case 11:
		goto st11
	case 12:
		goto st12
	case 13:
		goto st13
	case 14:
		goto st14
	case 15:
		goto st15
	case 16:
		goto st16
	case 17:
		goto st17
	case 18:
		goto st18
	case 19:
		goto st19
	case 20:
		goto st20
	case 21:
		goto st21
	case 22:
		goto st22
	case 23:
		goto st23
	case 24:
		goto st24
	case 25:
		goto st25
	case 494:
		goto st494
	case 495:
		goto st495
	case 26:
		goto st26
	case 496:
		goto st496
	case 497:
		goto st497
	case 498:
		goto st498
	case 27:
		goto st27
	case 499:
		goto st499
	case 500:
		goto st500
	case 501:
		goto st501
	case 502:
		goto st502
	case 503:
		goto st503
	case 504:
		goto st504
	case 505:
		goto st505
	case 506:
		goto st506
	case 507:
		goto st507
	case 508:
		goto st508
	case 509:
		goto st509
	case 510:
		goto st510
	case 511:
		goto st511
	case 512:
		goto st512
	case 513:
		goto st513
	case 514:
		goto st514
	case 515:
		goto st515
	case 516:
		goto st516
	case 28:
		goto st28
	case 29:
		goto st29
	case 517:
		goto st517
	case 518:
		goto st518
	case 519:
		goto st519
	case 30:
		goto st30
	case 31:
		goto st31
	case 32:
		goto st32
	case 33:
		goto st33
	case 34:
		goto st34
	case 520:
		goto st520
	case 521:
		goto st521
	case 522:
		goto st522
	case 523:
		goto st523
	case 35:
		goto st35
	case 524:
		goto st524
	case 525:
		goto st525
	case 526:
		goto st526
	case 527:
		goto st527
	case 36:
		goto st36
	case 528:
		goto st528
	case 529:
		goto st529
	case 530:
		goto st530
	case 531:
		goto st531
	case 532:
		goto st532
	case 533:
		goto st533
	case 534:
		goto st534
	case 535:
		goto st535
	case 536:
		goto st536
	case 537:
		goto st537
	case 538:
		goto st538
	case 539:
		goto st539
	case 540:
		goto st540
	case 541:
		goto st541
	case 542:
		goto st542
	case 543:
		goto st543
	case 544:
		goto st544
	case 545:
		goto st545
	case 37:
		goto st37
	case 38:
		goto st38
	case 39:
		goto st39
	case 40:
		goto st40
	case 41:
		goto st41
	case 42:
		goto st42
	case 43:
		goto st43
	case 44:
		goto st44
	case 45:
		goto st45
	case 546:
		goto st546
	case 547:
		goto st547
	case 548:
		goto st548
	case 46:
		goto st46
	case 47:
		goto st47
	case 48:
		goto st48
	case 49:
		goto st49
	case 50:
		goto st50
	case 51:
		goto st51
	case 549:
		goto st549
	case 550:
		goto st550
	case 52:
		goto st52
	case 551:
		goto st551
	case 552:
		goto st552
	case 553:
		goto st553
	case 554:
		goto st554
	case 555:
		goto st555
	case 556:
		goto st556
	case 557:
		goto st557
	case 558:
		goto st558
	case 559:
		goto st559
	case 560:
		goto st560
	case 561:
		goto st561
	case 562:
		goto st562
	case 563:
		goto st563
	case 564:
		goto st564
	case 565:
		goto st565
	case 566:
		goto st566
	case 567:
		goto st567
	case 568:
		goto st568
	case 569:
		goto st569
	case 570:
		goto st570
	case 53:
		goto st53
	case 571:
		goto st571
	case 572:
		goto st572
	case 573:
		goto st573
	case 54:
		goto st54
	case 574:
		goto st574
	case 575:
		goto st575
	case 576:
		goto st576
	case 577:
		goto st577
	case 578:
		goto st578
	case 579:
		goto st579
	case 580:
		goto st580
	case 581:
		goto st581
	case 582:
		goto st582
	case 583:
		goto st583
	case 584:
		goto st584
	case 585:
		goto st585
	case 586:
		goto st586
	case 587:
		goto st587
	case 588:
		goto st588
	case 589:
		goto st589
	case 590:
		goto st590
	case 591:
		goto st591
	case 592:
		goto st592
	case 593:
		goto st593
	case 55:
		goto st55
	case 56:
		goto st56
	case 57:
		goto st57
	case 594:
		goto st594
	case 595:
		goto st595
	case 596:
		goto st596
	case 58:
		goto st58
	case 597:
		goto st597
	case 598:
		goto st598
	case 59:
		goto st59
	case 599:
		goto st599
	case 60:
		goto st60
	case 600:
		goto st600
	case 601:
		goto st601
	case 602:
		goto st602
	case 603:
		goto st603
	case 604:
		goto st604
	case 605:
		goto st605
	case 606:
		goto st606
	case 607:
		goto st607
	case 608:
		goto st608
	case 609:
		goto st609
	case 610:
		goto st610
	case 611:
		goto st611
	case 612:
		goto st612
	case 613:
		goto st613
	case 614:
		goto st614
	case 615:
		goto st615
	case 616:
		goto st616
	case 617:
		goto st617
	case 618:
		goto st618
	case 619:
		goto st619
	case 61:
		goto st61
	case 62:
		goto st62
	case 63:
		goto st63
	case 64:
		goto st64
	case 65:
		goto st65
	case 66:
		goto st66
	case 67:
		goto st67
	case 620:
		goto st620
	case 68:
		goto st68
	case 69:
		goto st69
	case 70:
		goto st70
	case 71:
		goto st71
	case 621:
		goto st621
	case 622:
		goto st622
	case 623:
		goto st623
	case 624:
		goto st624
	case 72:
		goto st72
	case 73:
		goto st73
	case 74:
		goto st74
	case 75:
		goto st75
	case 625:
		goto st625
	case 626:
		goto st626
	case 76:
		goto st76
	case 627:
		goto st627
	case 77:
		goto st77
	case 78:
		goto st78
	case 628:
		goto st628
	case 629:
		goto st629
	case 79:
		goto st79
	case 630:
		goto st630
	case 631:
		goto st631
	case 80:
		goto st80
	case 632:
		goto st632
	case 633:
		goto st633
	case 634:
		goto st634
	case 635:
		goto st635
	case 636:
		goto st636
	case 637:
		goto st637
	case 638:
		goto st638
	case 639:
		goto st639
	case 640:
		goto st640
	case 641:
		goto st641
	case 642:
		goto st642
	case 643:
		goto st643
	case 644:
		goto st644
	case 645:
		goto st645
	case 646:
		goto st646
	case 647:
		goto st647
	case 648:
		goto st648
	case 649:
		goto st649
	case 81:
		goto st81
	case 650:
		goto st650
	case 651:
		goto st651
	case 652:
		goto st652
	case 82:
		goto st82
	case 653:
		goto st653
	case 654:
		goto st654
	case 655:
		goto st655
	case 83:
		goto st83
	case 656:
		goto st656
	case 657:
		goto st657
	case 658:
		goto st658
	case 659:
		goto st659
	case 660:
		goto st660
	case 661:
		goto st661
	case 662:
		goto st662
	case 663:
		goto st663
	case 664:
		goto st664
	case 665:
		goto st665
	case 666:
		goto st666
	case 667:
		goto st667
	case 668:
		goto st668
	case 669:
		goto st669
	case 670:
		goto st670
	case 671:
		goto st671
	case 672:
		goto st672
	case 673:
		goto st673
	case 674:
		goto st674
	case 84:
		goto st84
	case 85:
		goto st85
	case 86:
		goto st86
	case 675:
		goto st675
	case 87:
		goto st87
	case 676:
		goto st676
	case 677:
		goto st677
	case 678:
		goto st678
	case 679:
		goto st679
	case 680:
		goto st680
	case 681:
		goto st681
	case 682:
		goto st682
	case 683:
		goto st683
	case 684:
		goto st684
	case 685:
		goto st685
	case 686:
		goto st686
	case 687:
		goto st687
	case 688:
		goto st688
	case 689:
		goto st689
	case 690:
		goto st690
	case 691:
		goto st691
	case 692:
		goto st692
	case 693:
		goto st693
	case 694:
		goto st694
	case 695:
		goto st695
	case 696:
		goto st696
	case 697:
		goto st697
	case 88:
		goto st88
	case 89:
		goto st89
	case 90:
		goto st90
	case 91:
		goto st91
	case 92:
		goto st92
	case 698:
		goto st698
	case 699:
		goto st699
	case 700:
		goto st700
	case 701:
		goto st701
	case 702:
		goto st702
	case 93:
		goto st93
	case 94:
		goto st94
	case 95:
		goto st95
	case 703:
		goto st703
	case 96:
		goto st96
	case 97:
		goto st97
	case 98:
		goto st98
	case 704:
		goto st704
	case 99:
		goto st99
	case 100:
		goto st100
	case 705:
		goto st705
	case 706:
		goto st706
	case 101:
		goto st101
	case 102:
		goto st102
	case 707:
		goto st707
	case 708:
		goto st708
	case 709:
		goto st709
	case 103:
		goto st103
	case 710:
		goto st710
	case 711:
		goto st711
	case 712:
		goto st712
	case 713:
		goto st713
	case 714:
		goto st714
	case 715:
		goto st715
	case 716:
		goto st716
	case 717:
		goto st717
	case 718:
		goto st718
	case 719:
		goto st719
	case 720:
		goto st720
	case 721:
		goto st721
	case 722:
		goto st722
	case 723:
		goto st723
	case 724:
		goto st724
	case 725:
		goto st725
	case 726:
		goto st726
	case 727:
		goto st727
	case 728:
		goto st728
	case 729:
		goto st729
	case 730:
		goto st730
	case 731:
		goto st731
	case 732:
		goto st732
	case 733:
		goto st733
	case 104:
		goto st104
	case 105:
		goto st105
	case 106:
		goto st106
	case 734:
		goto st734
	case 107:
		goto st107
	case 108:
		goto st108
	case 109:
		goto st109
	case 735:
		goto st735
	case 110:
		goto st110
	case 111:
		goto st111
	case 736:
		goto st736
	case 737:
		goto st737
	case 112:
		goto st112
	case 738:
		goto st738
	case 113:
		goto st113
	case 739:
		goto st739
	case 740:
		goto st740
	case 741:
		goto st741
	case 114:
		goto st114
	case 115:
		goto st115
	case 116:
		goto st116
	case 742:
		goto st742
	case 117:
		goto st117
	case 118:
		goto st118
	case 119:
		goto st119
	case 743:
		goto st743
	case 120:
		goto st120
	case 121:
		goto st121
	case 744:
		goto st744
	case 745:
		goto st745
	case 746:
		goto st746
	case 747:
		goto st747
	case 748:
		goto st748
	case 749:
		goto st749
	case 750:
		goto st750
	case 751:
		goto st751
	case 752:
		goto st752
	case 753:
		goto st753
	case 754:
		goto st754
	case 755:
		goto st755
	case 756:
		goto st756
	case 757:
		goto st757
	case 758:
		goto st758
	case 759:
		goto st759
	case 760:
		goto st760
	case 761:
		goto st761
	case 762:
		goto st762
	case 763:
		goto st763
	case 122:
		goto st122
	case 764:
		goto st764
	case 765:
		goto st765
	case 766:
		goto st766
	case 123:
		goto st123
	case 767:
		goto st767
	case 768:
		goto st768
	case 124:
		goto st124
	case 769:
		goto st769
	case 770:
		goto st770
	case 771:
		goto st771
	case 772:
		goto st772
	case 773:
		goto st773
	case 774:
		goto st774
	case 775:
		goto st775
	case 776:
		goto st776
	case 777:
		goto st777
	case 778:
		goto st778
	case 779:
		goto st779
	case 780:
		goto st780
	case 781:
		goto st781
	case 782:
		goto st782
	case 783:
		goto st783
	case 784:
		goto st784
	case 785:
		goto st785
	case 786:
		goto st786
	case 787:
		goto st787
	case 125:
		goto st125
	case 788:
		goto st788
	case 789:
		goto st789
	case 790:
		goto st790
	case 126:
		goto st126
	case 127:
		goto st127
	case 128:
		goto st128
	case 791:
		goto st791
	case 129:
		goto st129
	case 130:
		goto st130
	case 131:
		goto st131
	case 792:
		goto st792
	case 132:
		goto st132
	case 133:
		goto st133
	case 793:
		goto st793
	case 794:
		goto st794
	case 134:
		goto st134
	case 135:
		goto st135
	case 136:
		goto st136
	case 137:
		goto st137
	case 138:
		goto st138
	case 139:
		goto st139
	case 795:
		goto st795
	case 796:
		goto st796
	case 797:
		goto st797
	case 798:
		goto st798
	case 799:
		goto st799
	case 800:
		goto st800
	case 801:
		goto st801
	case 802:
		goto st802
	case 803:
		goto st803
	case 804:
		goto st804
	case 805:
		goto st805
	case 806:
		goto st806
	case 807:
		goto st807
	case 808:
		goto st808
	case 809:
		goto st809
	case 810:
		goto st810
	case 811:
		goto st811
	case 812:
		goto st812
	case 813:
		goto st813
	case 140:
		goto st140
	case 141:
		goto st141
	case 142:
		goto st142
	case 814:
		goto st814
	case 815:
		goto st815
	case 816:
		goto st816
	case 817:
		goto st817
	case 818:
		goto st818
	case 143:
		goto st143
	case 144:
		goto st144
	case 145:
		goto st145
	case 819:
		goto st819
	case 146:
		goto st146
	case 147:
		goto st147
	case 148:
		goto st148
	case 820:
		goto st820
	case 149:
		goto st149
	case 150:
		goto st150
	case 821:
		goto st821
	case 822:
		goto st822
	case 151:
		goto st151
	case 152:
		goto st152
	case 153:
		goto st153
	case 823:
		goto st823
	case 824:
		goto st824
	case 825:
		goto st825
	case 826:
		goto st826
	case 827:
		goto st827
	case 154:
		goto st154
	case 155:
		goto st155
	case 156:
		goto st156
	case 828:
		goto st828
	case 157:
		goto st157
	case 158:
		goto st158
	case 159:
		goto st159
	case 829:
		goto st829
	case 160:
		goto st160
	case 161:
		goto st161
	case 830:
		goto st830
	case 831:
		goto st831
	case 162:
		goto st162
	case 163:
		goto st163
	case 164:
		goto st164
	case 832:
		goto st832
	case 833:
		goto st833
	case 834:
		goto st834
	case 835:
		goto st835
	case 836:
		goto st836
	case 837:
		goto st837
	case 838:
		goto st838
	case 839:
		goto st839
	case 840:
		goto st840
	case 841:
		goto st841
	case 842:
		goto st842
	case 843:
		goto st843
	case 844:
		goto st844
	case 845:
		goto st845
	case 846:
		goto st846
	case 847:
		goto st847
	case 848:
		goto st848
	case 849:
		goto st849
	case 850:
		goto st850
	case 165:
		goto st165
	case 166:
		goto st166
	case 167:
		goto st167
	case 168:
		goto st168
	case 851:
		goto st851
	case 852:
		goto st852
	case 853:
		goto st853
	case 854:
		goto st854
	case 855:
		goto st855
	case 169:
		goto st169
	case 170:
		goto st170
	case 171:
		goto st171
	case 856:
		goto st856
	case 172:
		goto st172
	case 173:
		goto st173
	case 174:
		goto st174
	case 857:
		goto st857
	case 175:
		goto st175
	case 176:
		goto st176
	case 858:
		goto st858
	case 859:
		goto st859
	case 177:
		goto st177
	case 178:
		goto st178
	case 179:
		goto st179
	case 860:
		goto st860
	case 861:
		goto st861
	case 862:
		goto st862
	case 863:
		goto st863
	case 864:
		goto st864
	case 180:
		goto st180
	case 181:
		goto st181
	case 182:
		goto st182
	case 865:
		goto st865
	case 183:
		goto st183
	case 184:
		goto st184
	case 185:
		goto st185
	case 866:
		goto st866
	case 186:
		goto st186
	case 187:
		goto st187
	case 867:
		goto st867
	case 868:
		goto st868
	case 188:
		goto st188
	case 189:
		goto st189
	case 190:
		goto st190
	case 191:
		goto st191
	case 192:
		goto st192
	case 193:
		goto st193
	case 869:
		goto st869
	case 870:
		goto st870
	case 871:
		goto st871
	case 872:
		goto st872
	case 873:
		goto st873
	case 874:
		goto st874
	case 875:
		goto st875
	case 876:
		goto st876
	case 877:
		goto st877
	case 878:
		goto st878
	case 879:
		goto st879
	case 880:
		goto st880
	case 881:
		goto st881
	case 882:
		goto st882
	case 883:
		goto st883
	case 884:
		goto st884
	case 885:
		goto st885
	case 886:
		goto st886
	case 887:
		goto st887
	case 194:
		goto st194
	case 888:
		goto st888
	case 889:
		goto st889
	case 890:
		goto st890
	case 891:
		goto st891
	case 892:
		goto st892
	case 195:
		goto st195
	case 196:
		goto st196
	case 197:
		goto st197
	case 893:
		goto st893
	case 198:
		goto st198
	case 199:
		goto st199
	case 200:
		goto st200
	case 894:
		goto st894
	case 201:
		goto st201
	case 202:
		goto st202
	case 895:
		goto st895
	case 896:
		goto st896
	case 203:
		goto st203
	case 204:
		goto st204
	case 205:
		goto st205
	case 206:
		goto st206
	case 207:
		goto st207
	case 208:
		goto st208
	case 209:
		goto st209
	case 210:
		goto st210
	case 211:
		goto st211
	case 212:
		goto st212
	case 897:
		goto st897
	case 898:
		goto st898
	case 899:
		goto st899
	case 213:
		goto st213
	case 214:
		goto st214
	case 215:
		goto st215
	case 900:
		goto st900
	case 901:
		goto st901
	case 216:
		goto st216
	case 902:
		goto st902
	case 903:
		goto st903
	case 904:
		goto st904
	case 905:
		goto st905
	case 906:
		goto st906
	case 907:
		goto st907
	case 908:
		goto st908
	case 909:
		goto st909
	case 910:
		goto st910
	case 911:
		goto st911
	case 912:
		goto st912
	case 913:
		goto st913
	case 914:
		goto st914
	case 915:
		goto st915
	case 916:
		goto st916
	case 917:
		goto st917
	case 918:
		goto st918
	case 919:
		goto st919
	case 920:
		goto st920
	case 217:
		goto st217
	case 921:
		goto st921
	case 922:
		goto st922
	case 218:
		goto st218
	case 219:
		goto st219
	case 220:
		goto st220
	case 221:
		goto st221
	case 923:
		goto st923
	case 222:
		goto st222
	case 223:
		goto st223
	case 224:
		goto st224
	case 924:
		goto st924
	case 925:
		goto st925
	case 225:
		goto st225
	case 226:
		goto st226
	case 227:
		goto st227
	case 228:
		goto st228
	case 229:
		goto st229
	case 926:
		goto st926
	case 927:
		goto st927
	case 928:
		goto st928
	case 929:
		goto st929
	case 930:
		goto st930
	case 230:
		goto st230
	case 231:
		goto st231
	case 232:
		goto st232
	case 931:
		goto st931
	case 233:
		goto st233
	case 234:
		goto st234
	case 235:
		goto st235
	case 932:
		goto st932
	case 236:
		goto st236
	case 237:
		goto st237
	case 933:
		goto st933
	case 934:
		goto st934
	case 238:
		goto st238
	case 239:
		goto st239
	case 935:
		goto st935
	case 936:
		goto st936
	case 937:
		goto st937
	case 938:
		goto st938
	case 939:
		goto st939
	case 240:
		goto st240
	case 241:
		goto st241
	case 242:
		goto st242
	case 940:
		goto st940
	case 243:
		goto st243
	case 244:
		goto st244
	case 245:
		goto st245
	case 941:
		goto st941
	case 246:
		goto st246
	case 247:
		goto st247
	case 942:
		goto st942
	case 943:
		goto st943
	case 248:
		goto st248
	case 249:
		goto st249
	case 944:
		goto st944
	case 945:
		goto st945
	case 946:
		goto st946
	case 947:
		goto st947
	case 948:
		goto st948
	case 250:
		goto st250
	case 251:
		goto st251
	case 252:
		goto st252
	case 949:
		goto st949
	case 253:
		goto st253
	case 254:
		goto st254
	case 255:
		goto st255
	case 950:
		goto st950
	case 256:
		goto st256
	case 257:
		goto st257
	case 951:
		goto st951
	case 952:
		goto st952
	case 258:
		goto st258
	case 259:
		goto st259
	case 260:
		goto st260
	case 261:
		goto st261
	case 262:
		goto st262
	case 263:
		goto st263
	case 953:
		goto st953
	case 954:
		goto st954
	case 955:
		goto st955
	case 956:
		goto st956
	case 264:
		goto st264
	case 957:
		goto st957
	case 958:
		goto st958
	case 959:
		goto st959
	case 960:
		goto st960
	case 961:
		goto st961
	case 962:
		goto st962
	case 963:
		goto st963
	case 964:
		goto st964
	case 965:
		goto st965
	case 966:
		goto st966
	case 967:
		goto st967
	case 968:
		goto st968
	case 969:
		goto st969
	case 970:
		goto st970
	case 971:
		goto st971
	case 972:
		goto st972
	case 973:
		goto st973
	case 974:
		goto st974
	case 975:
		goto st975
	case 976:
		goto st976
	case 265:
		goto st265
	case 266:
		goto st266
	case 267:
		goto st267
	case 268:
		goto st268
	case 269:
		goto st269
	case 270:
		goto st270
	case 271:
		goto st271
	case 272:
		goto st272
	case 977:
		goto st977
	case 978:
		goto st978
	case 273:
		goto st273
	case 979:
		goto st979
	case 980:
		goto st980
	case 981:
		goto st981
	case 982:
		goto st982
	case 983:
		goto st983
	case 984:
		goto st984
	case 985:
		goto st985
	case 986:
		goto st986
	case 987:
		goto st987
	case 988:
		goto st988
	case 989:
		goto st989
	case 990:
		goto st990
	case 991:
		goto st991
	case 992:
		goto st992
	case 993:
		goto st993
	case 994:
		goto st994
	case 995:
		goto st995
	case 996:
		goto st996
	case 997:
		goto st997
	case 274:
		goto st274
	case 275:
		goto st275
	case 998:
		goto st998
	case 999:
		goto st999
	case 276:
		goto st276
	case 1000:
		goto st1000
	case 1001:
		goto st1001
	case 1002:
		goto st1002
	case 1003:
		goto st1003
	case 1004:
		goto st1004
	case 1005:
		goto st1005
	case 1006:
		goto st1006
	case 1007:
		goto st1007
	case 1008:
		goto st1008
	case 1009:
		goto st1009
	case 1010:
		goto st1010
	case 1011:
		goto st1011
	case 1012:
		goto st1012
	case 1013:
		goto st1013
	case 1014:
		goto st1014
	case 1015:
		goto st1015
	case 1016:
		goto st1016
	case 1017:
		goto st1017
	case 1018:
		goto st1018
	case 277:
		goto st277
	case 1019:
		goto st1019
	case 1020:
		goto st1020
	case 278:
		goto st278
	case 279:
		goto st279
	case 280:
		goto st280
	case 281:
		goto st281
	case 1021:
		goto st1021
	case 1022:
		goto st1022
	case 1023:
		goto st1023
	case 1024:
		goto st1024
	case 1025:
		goto st1025
	case 282:
		goto st282
	case 283:
		goto st283
	case 284:
		goto st284
	case 1026:
		goto st1026
	case 285:
		goto st285
	case 286:
		goto st286
	case 287:
		goto st287
	case 1027:
		goto st1027
	case 288:
		goto st288
	case 289:
		goto st289
	case 1028:
		goto st1028
	case 1029:
		goto st1029
	case 290:
		goto st290
	case 291:
		goto st291
	case 1030:
		goto st1030
	case 1031:
		goto st1031
	case 1032:
		goto st1032
	case 292:
		goto st292
	case 1033:
		goto st1033
	case 1034:
		goto st1034
	case 293:
		goto st293
	case 1035:
		goto st1035
	case 1036:
		goto st1036
	case 1037:
		goto st1037
	case 1038:
		goto st1038
	case 1039:
		goto st1039
	case 1040:
		goto st1040
	case 1041:
		goto st1041
	case 1042:
		goto st1042
	case 1043:
		goto st1043
	case 1044:
		goto st1044
	case 1045:
		goto st1045
	case 1046:
		goto st1046
	case 1047:
		goto st1047
	case 1048:
		goto st1048
	case 1049:
		goto st1049
	case 1050:
		goto st1050
	case 1051:
		goto st1051
	case 1052:
		goto st1052
	case 1053:
		goto st1053
	case 1054:
		goto st1054
	case 294:
		goto st294
	case 295:
		goto st295
	case 1055:
		goto st1055
	case 1056:
		goto st1056
	case 296:
		goto st296
	case 1057:
		goto st1057
	case 1058:
		goto st1058
	case 1059:
		goto st1059
	case 1060:
		goto st1060
	case 1061:
		goto st1061
	case 1062:
		goto st1062
	case 1063:
		goto st1063
	case 1064:
		goto st1064
	case 1065:
		goto st1065
	case 1066:
		goto st1066
	case 1067:
		goto st1067
	case 1068:
		goto st1068
	case 1069:
		goto st1069
	case 1070:
		goto st1070
	case 1071:
		goto st1071
	case 1072:
		goto st1072
	case 1073:
		goto st1073
	case 1074:
		goto st1074
	case 1075:
		goto st1075
	case 1076:
		goto st1076
	case 297:
		goto st297
	case 1077:
		goto st1077
	case 1078:
		goto st1078
	case 1079:
		goto st1079
	case 298:
		goto st298
	case 1080:
		goto st1080
	case 1081:
		goto st1081
	case 1082:
		goto st1082
	case 1083:
		goto st1083
	case 1084:
		goto st1084
	case 1085:
		goto st1085
	case 1086:
		goto st1086
	case 1087:
		goto st1087
	case 1088:
		goto st1088
	case 1089:
		goto st1089
	case 1090:
		goto st1090
	case 1091:
		goto st1091
	case 1092:
		goto st1092
	case 1093:
		goto st1093
	case 1094:
		goto st1094
	case 1095:
		goto st1095
	case 1096:
		goto st1096
	case 1097:
		goto st1097
	case 1098:
		goto st1098
	case 1099:
		goto st1099
	case 1100:
		goto st1100
	case 1101:
		goto st1101
	case 1102:
		goto st1102
	case 299:
		goto st299
	case 1103:
		goto st1103
	case 1104:
		goto st1104
	case 1105:
		goto st1105
	case 1106:
		goto st1106
	case 1107:
		goto st1107
	case 1108:
		goto st1108
	case 1109:
		goto st1109
	case 1110:
		goto st1110
	case 1111:
		goto st1111
	case 1112:
		goto st1112
	case 1113:
		goto st1113
	case 1114:
		goto st1114
	case 1115:
		goto st1115
	case 1116:
		goto st1116
	case 1117:
		goto st1117
	case 1118:
		goto st1118
	case 1119:
		goto st1119
	case 1120:
		goto st1120
	case 1121:
		goto st1121
	case 1122:
		goto st1122
	case 1123:
		goto st1123
	case 1124:
		goto st1124
	case 300:
		goto st300
	case 301:
		goto st301
	case 1125:
		goto st1125
	case 1126:
		goto st1126
	case 302:
		goto st302
	case 1127:
		goto st1127
	case 1128:
		goto st1128
	case 1129:
		goto st1129
	case 1130:
		goto st1130
	case 1131:
		goto st1131
	case 1132:
		goto st1132
	case 1133:
		goto st1133
	case 1134:
		goto st1134
	case 1135:
		goto st1135
	case 1136:
		goto st1136
	case 1137:
		goto st1137
	case 1138:
		goto st1138
	case 1139:
		goto st1139
	case 1140:
		goto st1140
	case 1141:
		goto st1141
	case 1142:
		goto st1142
	case 1143:
		goto st1143
	case 1144:
		goto st1144
	case 1145:
		goto st1145
	case 303:
		goto st303
	case 1146:
		goto st1146
	case 1147:
		goto st1147
